--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -37,7 +37,7 @@ a
 		@media (min-width: scr_md)
 			b('bg_index_md.jpg', top center no-repeat, black)
 		@media (min-width: scr_lg)
-			b('bg_index_lg.jpg', top center no-repeat, black)
+			b('bg_index_lg.jpg', top center no-repeat, black, cover)
 html
 	height 100%
 
