--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -167,8 +167,9 @@ white = #f4f4f4
 				width 23px
 				height 23px
 				top 0
-				margin 0 4px
+				margin 0 2px
 				line-height 23px
+
 			&:hover
 				opacity 1
 			svg
@@ -236,7 +237,7 @@ a
 		@media (min-width: scr_md)
 			b('bg_index_md.jpg', top center no-repeat, black)
 		@media (min-width: scr_lg)
-			b('bg_index_lg.jpg', top center no-repeat, black)
+			b('bg_index_lg.jpg', top center no-repeat, black, cover)
 html
 	height 100%
 
@@ -1242,7 +1243,7 @@ article
 		@media (min-width: scr_sm)
 			margin-left 0px
 		@media (min-width: scr_lg)
-			margin-left 18px
+			margin-left 28px
 	/* Выбор сайтов холдинга */
 	.site-select
 		middle()
