--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -10,7 +10,7 @@
 	img.map
 		display none
 		@media (min-width: scr_sm)
-			display block
+			display inline-block
 	img
 		max-width 100%
 	.index &
@@ -318,9 +318,9 @@
 				&:hover
 					color white
 				@media (min-width: scr_sm)
-					width (100/2)%
-				@media (min-width: scr_md)
 					width (100/3)%
+				@media (min-width: scr_md)
+					width (100/4)%
 			&__picture
 				full-width()
 				background-repeat no-repeat
