--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -92,6 +92,8 @@
 	@media (min-width: scr_sm)
 		position relative
 		background rgba(0,0,0,.5)
+		margin-bottom 15px
+	@media (min-width: scr_md)
 		margin-bottom 35px
 	.divider
 		full-width()
