--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -1015,6 +1015,7 @@ article
 			padding-bottom 80px
 	.logo
 		full-width()
+		margin-bottom 20px
 		@media (min-width: scr_md)
 			display none
 		svg
@@ -1196,6 +1197,8 @@ article
 	@media (min-width: scr_sm)
 		position relative
 		background rgba(0,0,0,.5)
+		margin-bottom 15px
+	@media (min-width: scr_md)
 		margin-bottom 35px
 	.divider
 		full-width()
