--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -4840,6 +4840,7 @@ article {
 .sidebar .logo {
   float: left;
   width: 100%;
+  margin-bottom: 20px;
 }
 @media (min-width: 992px) {
   .sidebar .logo {
@@ -5126,6 +5127,11 @@ article {
   .toolbar {
     position: relative;
     background: rgba(0,0,0,0.5);
+    margin-bottom: 15px;
+  }
+}
+@media (min-width: 992px) {
+  .toolbar {
     margin-bottom: 35px;
   }
 }
