--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -1242,6 +1242,31 @@ article
 			&:hover
 				color blue
 				text-decoration: none
+	.search-form
+		position absolute
+		top 0px
+		display none
+		right 9px
+		line-height 55px
+		height 54px
+		background black
+		&__button
+			background transparent
+			border 0
+			line-height: auto
+			position relative
+			top: 3px
+			opacity 0
+		&__text
+			background black
+			border 1px solid blue
+			height 20px
+			border-radius 20px
+			line-height 24px
+			min-width 240px
+			padding 0 15px
+			font-size 12px
+			text-transform: uppercase
 	.lang-trigger
 		@media (min-width: scr_sm)
 			margin-left 0px
