--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -4696,6 +4696,7 @@ article {
 @media (min-width: 1200px) {
   .page .filter__item span {
     display: inline;
+    margin-left: 5px;
   }
 }
 .page .filter__item:after {
