--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -360,6 +360,7 @@
 				display none
 				@media (min-width: scr_lg)
 					display inline
+					margin-left 5px
 			&:after
 				border-bottom 1px dotted #595959
 				width 100%
