--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -914,6 +914,7 @@ article
 				display none
 				@media (min-width: scr_lg)
 					display inline
+					margin-left 5px
 			&:after
 				border-bottom 1px dotted #595959
 				width 100%
