--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -1006,6 +1006,15 @@ article
 				svg
 					path
 						fill white
+
+.tooltip
+	background-color: blue
+	border-radius 20px
+	margin-top -39px
+	transform translateX(-50%)
+	padding: 8px 15px 4px
+	font-family 'Proxima', 'Helvetica Neue', 'Arial', sans-serif
+	font-weight bold
 .sidebar
 	full-width()
 	z-index 10
