--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -4827,6 +4827,20 @@ article {
 .page .dropdown:hover .dropdown__trigger svg path {
   fill: #f4f4f4;
 }
+.tooltip {
+  background-color: #0049d3;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  margin-top: -39px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  padding: 8px 15px 4px;
+  font-family: 'Proxima', 'Helvetica Neue', 'Arial', sans-serif;
+  font-weight: bold;
+}
 .sidebar {
   float: left;
   width: 100%;
