--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -452,3 +452,12 @@
 				svg
 					path
 						fill white
+
+.tooltip
+	background-color: blue
+	border-radius 20px
+	margin-top -39px
+	transform translateX(-50%)
+	padding: 8px 15px 4px
+	font-family 'Proxima', 'Helvetica Neue', 'Arial', sans-serif
+	font-weight bold
