--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -252,6 +252,8 @@
 			width 100%
 			padding 7px 13px 0px
 			margin-left -13px
+			.map &
+				margin-left 0
 			line-height 85px
 			@media (min-width: scr_sm)
 				line-height 105px
