--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -4521,6 +4521,9 @@ article {
     padding-right: 15px;
   }
 }
+.map .page .services__item {
+  margin-left: 0;
+}
 @media (min-width: 768px) {
   .page .services__item {
     line-height: 105px;
