--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -806,6 +806,8 @@ article
 			width 100%
 			padding 7px 13px 0px
 			margin-left -13px
+			.map &
+				margin-left 0
 			line-height 85px
 			@media (min-width: scr_sm)
 				line-height 105px
