--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -455,7 +455,9 @@
 					path
 						fill white
 
-.tooltip
+.tooltip, #tt
+	position: absolute
+	z-index: 20000
 	background-color: blue
 	border-radius 20px
 	margin-top -39px
@@ -463,3 +465,5 @@
 	padding: 8px 15px 4px
 	font-family 'Proxima', 'Helvetica Neue', 'Arial', sans-serif
 	font-weight bold
+#tt
+	margin-top -10px
