--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -581,6 +581,9 @@ article
 			margin-top 20px
 			font-size 45px
 			line-height 40px
+		&--no-description
+			&:after
+				display none !important
 		&:after
 			margin-left 20px
 			content attr(data-more)
