--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -27,6 +27,9 @@
 			margin-top 20px
 			font-size 45px
 			line-height 40px
+		&--no-description
+			&:after
+				display none !important
 		&:after
 			margin-left 20px
 			content attr(data-more)
