--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1616,6 +1616,9 @@ article {
     line-height: 40px;
   }
 }
+.page__title--no-description:after {
+  display: none !important;
+}
 .page__title:after {
   margin-left: 20px;
   content: attr(data-more);
