--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -963,6 +963,8 @@ article
 			margin-top 10px
 			@media (min-width: scr_sm)
 				display none
+		&__select
+			display none
 		&__trigger
 			
 			color #9c9c9c
