--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -4775,6 +4775,9 @@ article {
     display: none;
   }
 }
+.page .dropdown__select {
+  display: none;
+}
 .page .dropdown__trigger {
   color: #9c9c9c;
   z-index: 2;
