--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -409,6 +409,8 @@
 			margin-top 10px
 			@media (min-width: scr_sm)
 				display none
+		&__select
+			display none
 		&__trigger
 			
 			color #9c9c9c
