--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -2258,6 +2258,9 @@ article {
   text-decoration: none;
   color: #f4f4f4;
 }
+.page .dropdown--open .dropdown__trigger svg path {
+  fill: #f4f4f4;
+}
 .page .dropdown--open .dropdown__trigger .dropdown__text {
   color: #f4f4f4;
 }
@@ -2305,12 +2308,6 @@ article {
 .page .dropdown__item:hover {
   color: #18a5f7;
   text-decoration: none;
-}
-.page .dropdown:hover .dropdown__trigger {
-  color: #f4f4f4;
-}
-.page .dropdown:hover .dropdown__trigger svg path {
-  fill: #f4f4f4;
 }
 .tooltip,
 #tt {
