--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -163,6 +163,8 @@
 			font-size 12px
 			text-transform: uppercase
 	.lang-trigger
+		position relative
+		z-index 20
 	/* Выбор сайтов холдинга */
 	.site-select
 		middle()
@@ -173,7 +175,7 @@
 		font-size 10px
 		text-transform uppercase
 		position: relative
-		z-index 200
+		z-index 300
 		&--open
 			.site-select__trigger
 				svg
