--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -1296,6 +1296,8 @@ article
 			font-size 12px
 			text-transform: uppercase
 	.lang-trigger
+		position relative
+		z-index 20
 	/* Выбор сайтов холдинга */
 	.site-select
 		middle()
@@ -1306,7 +1308,7 @@ article
 		font-size 10px
 		text-transform uppercase
 		position: relative
-		z-index 200
+		z-index 300
 		&--open
 			.site-select__trigger
 				svg
