--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -52,21 +52,21 @@
 	&__carriage
 		middle()
 		background blue
-		width 41px
-		height 20px
+		width 36px
+		height 17px
 		border-radius 10px
 		cursor pointer
-		margin 0 3px
+		margin 0 4px
 		position: relative
-		top -1px
+		top -2px
 		&:after
 			t(left)
 			content ""
-			width 12px
+			width 9px
 			border-radius 12px
 			left 4px
 			top 4px
-			height 12px
+			height 9px
 			box-shadow 0 1px 3px rgba(0,0,0,.3)
 			background white
 			position absolute
@@ -78,23 +78,41 @@
 	full-width()
 	position relative
 	height 61px
-	line-height 63px
-	@media (min-width: scr_md)
-		height 120px
-		line-height 58px
+	line-height 62px
 	z-index 20
 	white-space nowrap
-	background rgba(0,0,0,.8)
+	background rgba(28,28,28,.8)
 	margin-bottom 20px
 	top 0
 	left 0
 	position fixed
+	&:after
+		position absolute
+		height 33px
+		width 100%
+		content ""
+		background #1f2131
+		top 0
+		left 0
+		z-index 1
+		display none
+		@media (min-width: scr_md)
+			display block
+	.container
+		position relative
+		z-index 2
+	.shield
+		position absolute
+		left -62px
+		top 32px
 	@media (min-width: scr_sm)
 		position relative
-		background rgba(0,0,0,.5)
+		background rgba(28,28,28,.8)
 		margin-bottom 15px
 	@media (min-width: scr_md)
 		margin-bottom 35px
+		height 91px
+		line-height 38px
 	.divider
 		full-width()
 		margin-top -5px
@@ -120,8 +138,8 @@
 			font-weight bold
 			text-transform uppercase
 			color white
-			line-height 31px
-			height 32px
+			line-height 53px
+			height 53px
 			@media (min-width: scr_sm)
 				font-size 15px
 				padding 3px 8.8px 0
@@ -139,12 +157,13 @@
 				text-decoration: none
 	.search-form
 		position absolute
+		z-index 30
 		top 0px
 		display none
 		right 9px
-		line-height 55px
-		height 54px
-		background black
+		line-height 35px
+		height 32px
+		background #1f2130
 		&__button
 			background transparent
 			border 0
@@ -153,7 +172,7 @@
 			top: 3px
 			opacity 0
 		&__text
-			background black
+			background transparent
 			border 1px solid blue
 			height 20px
 			border-radius 20px
@@ -161,7 +180,6 @@
 			min-width 240px
 			padding 0 15px
 			font-size 12px
-			text-transform: uppercase
 	.lang-trigger
 		position relative
 		z-index 20
@@ -169,8 +187,7 @@
 	.site-select
 		middle()
 		width 100%
-		@media (min-width: scr_md)
-			width 200px
+			
 		font-weight bold
 		font-size 10px
 		text-transform uppercase
@@ -253,13 +270,16 @@
 		@media (min-width: scr_sm)
 			display none
 	.phone
+		middle()
 		color white
 		font-size 15px
 		font-weight bold
+		top 1px
+		position relative
 		svg
 			middle()
 			position relative
-			top -1px
+			top -2px
 			margin-right 10px
 	.feedback, .filials
 		middle()
