--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -3512,6 +3512,7 @@ input:focus {
   float: left;
 }
 .footer .radia__content {
+  font-weight: normal;
   float: left;
   color: #fff;
   text-decoration: none;
