--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -191,6 +191,7 @@ white = #f4f4f4
 			margin-right: 10px
 			float left
 		&__content
+			font-weight normal
 			float left
 			color #fff
 			text-decoration: none
