--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -553,6 +553,24 @@ article
 		&:hover, &--active
 			background blue2
 			color white
+.map-columns
+	td
+		width (100/3)%
+	ul
+		font-size 13px
+		&.map-level-0
+			> li
+				list-style none
+				margin-bottom 20px
+				> ul
+					padding-left 20px
+					margin-top 10px
+					li
+						> a
+							font-size 14px
+							font-weight bold
+				> a
+					font-size 18px
 .page
 	padding-bottom 40px
 	color white
