--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -569,7 +569,7 @@ article
 					li
 						> a
 							font-size 12px
-							font-weight bold
+							font-weight normal
 				> a
 					font-size 18px
 .page
