--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -13,7 +13,7 @@
 					li
 						> a
 							font-size 12px
-							font-weight bold
+							font-weight normal
 				> a
 					font-size 18px
 .page
