--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1587,7 +1587,7 @@ article {
 }
 .map-columns ul.map-level-0 > li > ul li > a {
   font-size: 12px;
-  font-weight: bold;
+  font-weight: normal;
 }
 .map-columns ul.map-level-0 > li > a {
   font-size: 18px;
