--- a/sources/css/import/mobile.styl
+++ b/sources/css/import/mobile.styl
@@ -77,6 +77,10 @@
 			padding 5px 25px 0
 			font-weight bold
 			text-transform: uppercase
+			t(background, color)
+			&:hover
+				background blue
+				color black
 	&-title
 		full-width()
 		color white
