--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -144,11 +144,11 @@
 		color blue2
 		text-transform: uppercase
 		font-weight bold
-		t(opacity)
+		t(background, color)
 		text-align: center
 		&:hover
-			opacity .8
-			color blue2
+			background blue2
+			color black
 			text-decoration: none
 		&--big
 			padding 0 33px
@@ -161,7 +161,8 @@
 			color white
 			border-color white
 			&:hover
-				color white
+				color black
+				background white
 	.partners-list
 		line-height 110px
 		text-align center
