--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -513,6 +513,10 @@ article
 			padding 5px 25px 0
 			font-weight bold
 			text-transform: uppercase
+			t(background, color)
+			&:hover
+				background blue
+				color black
 	&-title
 		full-width()
 		color white
@@ -700,11 +704,11 @@ article
 		color blue2
 		text-transform: uppercase
 		font-weight bold
-		t(opacity)
+		t(background, color)
 		text-align: center
 		&:hover
-			opacity .8
-			color blue2
+			background blue2
+			color black
 			text-decoration: none
 		&--big
 			padding 0 33px
@@ -717,7 +721,8 @@ article
 			color white
 			border-color white
 			&:hover
-				color white
+				color black
+				background white
 	.partners-list
 		line-height 110px
 		text-align center
