--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -2344,6 +2344,46 @@ article {
   color: #18a5f7;
   text-decoration: none;
 }
+.page .search-page {
+  float: left;
+  width: 100%;
+  font-size: 14px;
+}
+.page .search-page__text,
+.page .search-page__sort {
+  font-size: 14px;
+}
+.page .search-page__title {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 8px;
+  display: inline-block;
+}
+.page .search-page small {
+  width: 100%;
+  display: inline-block;
+}
+.page .search-page form input[type=text] {
+  background: transparent;
+  border: 1px solid #0049d3;
+  height: 35px;
+  line-height: 38px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  padding: 0 50px 0 20px;
+}
+.page .search-page form button[type=submit] {
+  background: transparent;
+  border: 0;
+  margin-left: -44px;
+  display: inline-block;
+}
+.page .search-page form button[type=submit] svg {
+  position: relative;
+  top: 4px;
+  min-height: 20px;
+  min-width: 20px;
+}
 .tooltip,
 #tt {
   position: absolute;
