--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -200,8 +200,9 @@
 			full-width()
 			font-size 13px
 			min-height 55px
-			line-height 15px
+			line-height 16px
 			padding-bottom 12px
+			padding-top 3px
 			font-weight 300
 			&:hover
 				text-decoration none
