--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1891,8 +1891,9 @@ article {
   width: 100%;
   font-size: 13px;
   min-height: 55px;
-  line-height: 15px;
+  line-height: 16px;
   padding-bottom: 12px;
+  padding-top: 3px;
   font-weight: 300;
 }
 .page .tech__title:hover {
