--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -760,8 +760,9 @@ article
 			full-width()
 			font-size 13px
 			min-height 55px
-			line-height 15px
+			line-height 16px
 			padding-bottom 12px
+			padding-top 3px
 			font-weight 300
 			&:hover
 				text-decoration none
