--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -739,7 +739,7 @@ article
 
 			full-width()
 			background rgba(0,0,0,.45)
-			padding 13px 13px 7px
+			padding 13px 13px 6px
 			t(background)
 			&:hover
 				background #0082dc !important
@@ -748,6 +748,14 @@ article
 			@media (min-width: scr_sm)
 				margin-top 30px
 				padding 13px 13px 10px
+		&__icons--frame
+			padding-bottom 26px
+		&__icons
+			position absolute
+			bottom 0px
+			left 0
+			width 100%
+			padding 0 15px
 		&__image
 			full-width()
 			height 80px
@@ -793,6 +801,8 @@ article
 				@media (min-width: scr_xs)
 					max-width 26px
 					max-height 22px
+		&__video
+			left -3px
 		&__photos
 			left 0px
 			svg
