--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -179,7 +179,7 @@
 
 			full-width()
 			background rgba(0,0,0,.45)
-			padding 13px 13px 7px
+			padding 13px 13px 6px
 			t(background)
 			&:hover
 				background #0082dc !important
@@ -188,6 +188,14 @@
 			@media (min-width: scr_sm)
 				margin-top 30px
 				padding 13px 13px 10px
+		&__icons--frame
+			padding-bottom 26px
+		&__icons
+			position absolute
+			bottom 0px
+			left 0
+			width 100%
+			padding 0 15px
 		&__image
 			full-width()
 			height 80px
@@ -233,6 +241,8 @@
 				@media (min-width: scr_xs)
 					max-width 26px
 					max-height 22px
+		&__video
+			left -3px
 		&__photos
 			left 0px
 			svg
